[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Sarthak Kapila <sarthakkapila27x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
salesgpt = "^0.1.1"
langchain-community = "^0.0.16"
transformers = "^4.37.2"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
